<resources>

    <string name="app_name">Nature Explorer</string>

    <string name="welcome_title">
        Welcome to Nature Explorer!
    </string>

    <string name="welcome_description">
        Discover the beauty of nature with our app. Explore mountains, forests, and lakes.
    </string>

    <string name="nav_home">Home</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_details">Details</string>
    <string name="nav_website">Visit Website</string>
    <string name="nav_email">Send Email</string>



    <string name="nature_image_desc">Nature Image</string>

    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>

</resources>