<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/nav_gallery"
        android:title="@string/nav_gallery"
        android:icon="@drawable/ic_gallery"/>

    <item
        android:id="@+id/nav_favorites"
        android:title="@string/nav_favorites"
        android:icon="@drawable/ic_favorites"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_settings"/>



    <item
        android:id="@+id/nav_details"
        android:title="@string/nav_details"
        android:icon="@drawable/ic_details"/>

    <item
        android:id="@+id/nav_website"
        android:title="@string/nav_website" />

    <item
        android:id="@+id/nav_email"
        android:title="@string/nav_email" />

</menu>